--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -16,7 +16,7 @@
 
         <header class="header">
             <div class="container header__container">
-                <img class="logo" src="../img/Logo.svg" alt="logo">
+                <a href="../index.html"><img class="logo" src="../img/Logo.svg" alt="logo"></a>
                 <nav class="header__nav">
                    <label class="header__nav-label" for="ham">
                     <div class="header__nav-icon"> 
@@ -48,6 +48,7 @@
 
         <!-- contacts start -->
         <main class="contact--page">
+            
           <section class="contacts">
             <div class="container contacts__container">
                <div class="contacts__content">
