--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -17,7 +17,7 @@
 
         <header class="header">
             <div class="container header__container">
-                <img class="logo" src="../img/Logo.svg" alt="logo">
+                <a href="../index.html"><img class="logo" src="../img/Logo.svg" alt="logo"></a>
                 <nav class="header__nav">
                     <label class="header__nav-label" for="ham">
                         <div class="header__nav-icon"> 
