--- a/src/pages/blogsec/blogsec.html
+++ b/src/pages/blogsec/blogsec.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
         <header class="header">
             <div class="container header__container">
-                <img class="logo" src="../../img/Logo.svg" alt="logo">
+                <a href="../../../index.html"><img class="logo" src="../../img/Logo.svg" alt="logo"></a>
                 <nav class="header__nav">
                     <label class="header__nav-label" for="ham">
                         <div class="header__nav-icon">
@@ -246,7 +246,7 @@
                         <div class="comment__field-main">
                             <img class="comment__writer-img" src="../../img/blogsec/people2.jpg" alt="">
                             <div class="comment__field-content">
-                                <div class="comment__field-content-info">
+                                <div class="comment__field-about">
                                     <h4 class="h4 title writer__name">
                                         Scarlet withch
                                     </h4>
@@ -254,7 +254,7 @@
                                         6 May, 2020
                                     </p>
                                 </div>
-                                <p class="h4 comment__field-content-text">
+                                <p class="h4 comment__field-comments">
                                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
                                     euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
                                 </p>
@@ -276,7 +276,7 @@
                         <div class="comment__field-reply">
                             <img class="comment__writer-img" src="../../img/blogsec/people3.jpg" alt="">
                             <div class="comment__field-content">
-                                <div class="comment__field-content-info">
+                                <div class="comment__field-about">
                                     <h4 class="h4 title writer__name">
                                         Kate Moss
                                     </h4>
@@ -284,7 +284,7 @@
                                         6 May, 2020
                                     </p>
                                 </div>
-                                <p class="h4 comment__field-content-text">
+                                <p class="h4 comment__field-comments">
                                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
                                     euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
                                 </p>
@@ -306,7 +306,7 @@
                         <div class="comment__field-main">
                             <img class="comment__writer-img" src="../../img/blogsec/people2.jpg" alt="">
                             <div class="comment__field-content">
-                                <div class="comment__field-content-info">
+                                <div class="comment__field-about">
                                     <h4 class="h4 title writer__name">
                                         Scarlet withch
                                     </h4>
@@ -314,7 +314,7 @@
                                         6 May, 2020
                                     </p>
                                 </div>
-                                <p class="h4 comment__field-content-text">
+                                <p class="h4 comment__field-comments">
                                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
                                     euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
                                 </p>
