--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
         <header class="header">
             <div class="container header__container">
-               <a href="./index.html"><img class="logo" src="./img/Logo.svg" alt="logo"></a>
+               <a href="/"><img class="logo" src="./img/Logo.svg" alt="logo"></a>
                 <nav class="header__nav">
                    <label class="header__nav-label" for="ham">
                     <div class="header__nav-icon"> 
