--- a/src/pages/blogsec/blogsec.html
+++ b/src/pages/blogsec/blogsec.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
         <header class="header">
             <div class="container header__container">
-                <a href="../../../index.html"><img class="logo" src="../../img/Logo.svg" alt="logo"></a>
+                <a href="/"><img class="logo" src="../../img/Logo.svg" alt="logo"></a>
                 <nav class="header__nav">
                     <label class="header__nav-label" for="ham">
                         <div class="header__nav-icon">
